--- a/src/index.html
+++ b/src/index.html
@@ -7,22 +7,15 @@
     <title>Web Phone!</title>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <link rel="stylesheet" href="index.css" />
-    <script src="index.js" defer></script>
+    <script type="module" src="index.ts" defer></script>
   </head>
   <body>
-    <div class="container">
+    <main class="disconnected">
       <h1>Phone a friend</h1>
-      <p id="caststatus" class="big">Connecting...</p>
-      <p>Please use headphones!</p>
+      <p class="message">Connecting...</p>
       <button class="call-btn">Call</button>
-      <section class="call-container" hidden>
-        <div class="audio-container">
-          <p>You're automatically muted, unmute yourself!</p>
-          <audio controls id="remoteAudio" muted="true"></audio>
-          <audio controls id="localAudio" muted="true"></audio>
-        </div>
-        <button class="hangup-btn">Hang up</button>
-      </section>
-    </div>
+      <button class="hangup-btn">Hang up</button>
+      <div class="audio-container"></div>
+    </main>
   </body>
 </html>
